# nix

exempleHelloC++/: .CMakeLists.txt.un~  .hello.cpp.un~  .hellow.nix.un~  CMakeLists.txt  hello.cpp  hellow.nix  result
webserver_cgi/: cgi_field.py  damiers.html  default.nix  hello.py  hello_name.py  image.py  index.html  nixops.nix  print_captain.py  print_env.py  utils.py
webserver_cgi/assets/: captain.txt
webserver_cgi_haskell/: .shell.nix.un~  calcul.cabal  calcul.hs  calcul.nix  default.nix  index.html  nixops.nix  result  shell.nix
webserver_cgi_haskell/src/: caesar.hs  calcul.hs  calculhtml.hs  hello.hs  hellohtml.hs
webserver_docGhc/: .nixops.nix.un~  nixops.nix
webserver_persoWebsite/: .default.nix.un~  .index.html.un~  .nixops.nix.un~  default.nix  nixops.nix
webserver_persoWebsite/docroot/: index.html
